--- a/src/app/components/shared/room-list/room-list.component.scss
+++ b/src/app/components/shared/room-list/room-list.component.scss
@@ -15,6 +15,10 @@ button {
   background-color: #bbdefb;
 }
 
+.matPanelListHeader {
+  background-color: #cfd8dc !important;
+}
+
 mat-panel-title {
   flex-basis: 0;
   align-items: center;
